--- a/index.html
+++ b/index.html
@@ -4,249 +4,406 @@
   <meta charset="UTF-8">
   <title>Desafio dos 60 Segundos 🧠</title>
   <meta name="viewport" content="width=device-width, initial-scale=1">
+  
+  <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-9968425306160320"
+          crossorigin="anonymous"></script>
   <style>
     body {
-      font-family: 'Segoe UI', sans-serif;
-      background: linear-gradient(135deg, #fbe9e7, #f3e5f5);
-      margin: 0;
-      padding: 0;
+      font-family: Arial, sans-serif;
       display: flex;
-      justify-content: center;
+      flex-direction: column;
       align-items: center;
-      height: 100vh;
+      justify-content: flex-start; /* Alinhado ao topo */
+      min-height: 100vh;
+      margin: 0;
+      background-color: #f4f4f4;
+      color: #333;
+      padding: 20px;
+      box-sizing: border-box;
     }
-    .container {
-      text-align: center;
-      background: white;
-      padding: 30px;
-      border-radius: 12px;
-      box-shadow: 0 0 15px rgba(0,0,0,0.1);
-      max-width: 400px;
-      width: 90%;
-      transition: 0.3s ease;
-    }
-    .shake {
-      animation: shake 0.4s;
-    }
-    .flash {
-      animation: flash 0.3s;
-    }
-    @keyframes shake {
-      0% { transform: translateX(0); }
-      25% { transform: translateX(-8px); }
-      50% { transform: translateX(8px); }
-      75% { transform: translateX(-8px); }
-      100% { transform: translateX(0); }
-    }
-    @keyframes flash {
-      0% { background-color: #a5d6a7; }
-      100% { background-color: white; }
-    }
+
     h1 {
-      margin-bottom: 10px;
-      color: #6a1b9a;
+      color: #4CAF50;
+      margin-bottom: 20px;
     }
-    .info {
-      font-size: 18px;
-      margin: 10px 0;
+
+    #game-container {
+      background-color: #fff;
+      padding: 30px;
+      border-radius: 8px;
+      box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
+      text-align: center;
+      width: 90%;
+      max-width: 500px;
+      margin-bottom: 20px; /* Espaço antes do ranking */
     }
-    .equacao {
-      font-size: 32px;
-      margin: 20px 0;
-      font-weight: bold;
+
+    #question-area {
+      margin-bottom: 20px;
     }
-    input[type="number"], input[type="text"] {
-      width: 100%;
+
+    #question {
+      font-size: 2em;
+      margin-bottom: 15px;
+      color: #555;
+    }
+
+    #answer-input {
       padding: 10px;
-      font-size: 18px;
-      border-radius: 6px;
-      border: 1px solid #ccc;
+      font-size: 1.2em;
+      width: calc(100% - 22px);
+      margin-bottom: 15px;
+      border: 1px solid #ddd;
+      border-radius: 4px;
+      text-align: center;
+    }
+
+    button {
+      background-color: #007bff;
+      color: white;
+      padding: 12px 25px;
+      border: none;
+      border-radius: 4px;
+      cursor: pointer;
+      font-size: 1.1em;
+      transition: background-color 0.3s ease;
+      margin: 5px;
+    }
+
+    button:hover {
+      background-color: #0056b3;
+    }
+
+    #message {
+      margin-top: 15px;
+      font-weight: bold;
+      color: #d9534f; /* Vermelho para erro */
+    }
+
+    #timer, #score {
+      font-size: 1.2em;
+      margin: 10px 0;
+      color: #666;
+    }
+
+    #timer-value, #score-value {
+      font-weight: bold;
+      color: #4CAF50;
+    }
+
+    #start-button {
+      background-color: #28a745;
+      padding: 15px 30px;
+      font-size: 1.3em;
+    }
+
+    #start-button:hover {
+      background-color: #218838;
+    }
+
+    #ranking-area {
+      background-color: #fff;
+      padding: 20px;
+      border-radius: 8px;
+      box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
+      width: 90%;
+      max-width: 500px;
+    }
+
+    #ranking-area h2 {
+      color: #4CAF50;
       margin-bottom: 15px;
     }
-    button {
-      background: #8e24aa;
-      color: white;
-      border: none;
-      padding: 10px 20px;
-      font-size: 16px;
-      border-radius: 8px;
-      cursor: pointer;
-    }
-    button:hover {
-      background: #6a1b9a;
-    }
-    #status {
-      margin-top: 10px;
-      font-weight: bold;
-    }
-    .ranking {
-      margin-top: 20px;
+
+    #ranking-list {
+      list-style: none;
+      padding: 0;
       text-align: left;
     }
-    .ranking h3 {
-      margin-bottom: 5px;
-      color: #444;
+
+    #ranking-list li {
+      padding: 8px 0;
+      border-bottom: 1px solid #eee;
+      display: flex;
+      justify-content: space-between;
+      align-items: center;
     }
-    .ranking ol {
-      padding-left: 20px;
+
+    #ranking-list li:last-child {
+      border-bottom: none;
     }
-    .ranking li {
-      margin-bottom: 4px;
+
+    .ranking-position {
+      font-weight: bold;
+      color: #007bff;
+    }
+
+    .ranking-name {
+      flex-grow: 1;
+      margin-left: 10px;
+    }
+
+    .ranking-score {
+      font-weight: bold;
+      color: #333;
+    }
+
+    /* Ad-placeholder CSS está aqui, mas os DIVs foram removidos do HTML */
+    .ad-placeholder {
+      width: 100%;
+      max-width: 728px;
+      height: 90px;
+      background-color: #eee;
+      border: 1px dashed #ccc;
+      display: flex;
+      align-items: center;
+      justify-content: center;
+      margin-top: 20px;
+      margin-bottom: 20px;
+      font-size: 0.9em;
+      color: #777;
+    }
+
+    /* Responsividade */
+    @media (max-width: 600px) {
+      #game-container, #ranking-area {
+        padding: 20px;
+      }
+      #question {
+        font-size: 1.5em;
+      }
+      #answer-input, button {
+        font-size: 1em;
+        padding: 10px 20px;
+      }
     }
   </style>
+
+  <script src="https://www.gstatic.com/firebasejs/9.23.0/firebase-app-compat.js"></script>
+  <script src="https://www.gstatic.com/firebasejs/9.23.0/firebase-firestore-compat.js"></script>
+
+  <script>
+    // SEU CÓDIGO firebaseConfig DO FIREBASE VAI AQUI:
+    const firebaseConfig = {
+      apiKey: "AIzaSyA4PWRt-22S8HGc6GS1m-4Wa9hYsh5Zbo",
+      authDomain: "desafio-dos-60-segundos.firebaseapp.com",
+      projectId: "desafio-dos-60-segundos",
+      storageBucket: "desafio-dos-60-segundos.firebaseapp.com",
+      messagingSenderId: "1054471364887",
+      appId: "1:1054471364887:web:332b4f28814e9f5d0cd752",
+      measurementId: "G-N4PWJ72YCJ"
+    };
+
+    // Inicialize o Firebase
+    const app = firebase.initializeApp(firebaseConfig);
+    // Obtenha uma referência ao serviço Firestore
+    const db = app.firestore(); 
+  </script>
+
 </head>
 <body>
+  <h1>Desafio dos 60 Segundos 🧠</h1>
 
-<div class="container" id="gameContainer">
-  <h1>🧠 Desafio dos 60 Segundos</h1>
-  <div class="info">⏱️ Tempo: <span id="tempo">60</span>s | 🏆 Pontos: <span id="pontos">0</span></div>
-  <div class="equacao" id="equacao">5 + 3 = ?</div>
-  <input type="number" id="resposta" placeholder="Digite a resposta" autofocus>
-  <button onclick="verificarResposta()">Responder</button>
-  <p id="status"></p>
+  <div id="game-container">
+    <div id="status">
+      <p id="timer">Tempo: <span id="timer-value">60s</span></p>
+      <p id="score">Pontos: <span id="score-value">0</span></p>
+    </div>
 
-  <div id="nomeArea" style="display:none;">
-    <input type="text" id="nomeJogador" placeholder="Seu nome">
-    <button onclick="salvarPontuacao()">Salvar Pontuação</button>
+    <div id="question-area">
+      <p id="question">Clique em "Começar Jogo" para iniciar!</p>
+      <input type="number" id="answer-input" placeholder="Digite a resposta" disabled>
+      <p id="message"></p>
+    </div>
+
+    <button id="submit-answer" style="display: none;">Responder</button>
+    <button id="start-button">Começar Jogo</button>
+    <button id="play-again" style="display: none;">Jogar Novamente</button>
   </div>
 
-  <button onclick="iniciarJogo()" style="margin-top:20px;">🔁 Jogar Novamente</button>
-
-  <div class="ranking">
-    <h3>🏅 Ranking (Top 10)</h3>
-    <ol id="rankingLista"></ol>
+  <div id="ranking-area">
+    <h2>🏆 Ranking (Top 10)</h2>
+    <ol id="ranking-list">
+    </ol>
   </div>
-</div>
 
-<!-- Sons -->
-<audio id="somAcerto" src="https://cdn.pixabay.com/audio/2022/03/15/audio_a9cb8aeb29.mp3"></audio>
-<audio id="somErro" src="https://cdn.pixabay.com/audio/2022/03/15/audio_6e00c7724c.mp3"></audio>
-<audio id="somFim" src="https://cdn.pixabay.com/audio/2022/03/15/audio_467b1c181c.mp3"></audio>
+  <script>
+    const questionElement = document.getElementById('question');
+    const answerInput = document.getElementById('answer-input');
+    const submitAnswerButton = document.getElementById('submit-answer');
+    const messageElement = document.getElementById('message');
+    const timerValueElement = document.getElementById('timer-value');
+    const scoreValueElement = document.getElementById('score-value');
+    const startButton = document.getElementById('start-button');
+    const playAgainButton = document.getElementById('play-again');
+    const rankingList = document.getElementById('ranking-list');
 
-<script>
-  let tempo = 60;
-  let pontos = 0;
-  let timer;
-  let respostaCorreta = 0;
+    let currentQuestion;
+    let score = 0;
+    let timeLeft = 60;
+    let timerInterval;
+    let gameActive = false;
 
-  const input = document.getElementById('resposta');
-  const container = document.getElementById('gameContainer');
-  const somAcerto = document.getElementById('somAcerto');
-  const somErro = document.getElementById('somErro');
-  const somFim = document.getElementById('somFim');
-
-  function gerarEquacao() {
-    const op = ['+', '-', 'x'][Math.floor(Math.random() * 3)];
-    let n1 = Math.floor(Math.random() * 10) + 1;
-    let n2 = Math.floor(Math.random() * 10) + 1;
-
-    if (pontos >= 5) {
-      n1 = Math.floor(Math.random() * 20) + 10;
-      n2 = Math.floor(Math.random() * 20) + 10;
+    // Funções para Ranking (AGORA COM FIREBASE)
+    function saveRanking(player, score) {
+        // Adiciona um novo documento à coleção 'ranking' no Firestore
+        db.collection("ranking").add({
+            player: player,
+            score: score,
+            timestamp: firebase.firestore.FieldValue.serverTimestamp() // Para ordenar por data
+        })
+        .then((docRef) => {
+            console.log("Documento escrito com ID: ", docRef.id);
+            displayRanking(); // Atualiza o ranking depois de salvar
+        })
+        .catch((error) => {
+            console.error("Erro ao adicionar documento: ", error);
+            alert("Erro ao salvar pontuação: " + error.message); // Alerta o usuário em caso de erro
+        });
     }
 
-    let resultado;
-    if (op === '+') resultado = n1 + n2;
-    else if (op === '-') resultado = n1 - n2;
-    else if (op === 'x') resultado = n1 * n2;
+    async function displayRanking() {
+        rankingList.innerHTML = '<li>Carregando ranking...</li>';
+        try {
+            // Pega os 10 melhores da coleção 'ranking', ordenados por pontuação decrescente
+            const snapshot = await db.collection("ranking")
+                                     .orderBy("score", "desc")
+                                     .limit(10)
+                                     .get();
 
-    document.getElementById('equacao').textContent = `${n1} ${op} ${n2} = ?`;
-    respostaCorreta = resultado;
-  }
+            rankingList.innerHTML = ''; // Limpa o ranking
+            if (snapshot.empty) {
+                rankingList.innerHTML = '<li>Nenhum recorde ainda. Seja o primeiro!</li>';
+                return;
+            }
 
-  function verificarResposta() {
-    const valor = parseInt(input.value);
+            let rankingIndex = 0; // CORREÇÃO PARA O NaN: Inicializa um contador de ranking
+            snapshot.forEach((doc) => { // CORREÇÃO PARA O NaN: Remove 'index' do argumento aqui
+                const data = doc.data();
+                const li = document.createElement('li');
+                
+                rankingIndex++; // CORREÇÃO PARA O NaN: Incrementa o contador para cada item
 
-    if (isNaN(valor)) return;
-
-    if (valor === respostaCorreta) {
-      pontos++;
-      document.getElementById('status').textContent = "✅ Correto!";
-      somAcerto.play();
-      animar("flash");
-    } else {
-      tempo = Math.max(tempo - 2, 0);
-      document.getElementById('status').textContent = "❌ Errado!";
-      somErro.play();
-      animar("shake");
+                // console.log para depuração (pode deixar ou remover depois)
+                console.log(`Debug Ranking: index (manual) = ${rankingIndex - 1}, position = ${rankingIndex}º, player = ${data.player}, score = ${data.score}`); 
+                
+                // CORREÇÃO PARA O NaN: Usamos rankingIndex aqui
+                li.innerHTML = `<span class="ranking-position">${rankingIndex}º</span> <span class="ranking-name">${data.player}</span> <span class="ranking-score">${data.score}</span>`;
+                rankingList.appendChild(li);
+            });
+        } catch (error) {
+            console.error("Erro ao carregar ranking: ", error);
+            rankingList.innerHTML = '<li>Erro ao carregar ranking. Verifique as regras do Firebase.</li>';
+            alert("Erro ao carregar ranking. Verifique o console para mais detalhes."); // Alerta o usuário
+        }
     }
 
-    input.value = "";
-    input.focus();
-    atualizarTela();
-    gerarEquacao();
-  }
+    function generateQuestion() {
+      const num1 = Math.floor(Math.random() * 10) + 1;
+      const num2 = Math.floor(Math.random() * 10) + 1;
+      const operators = ['+', '-', '*'];
+      const operator = operators[Math.floor(Math.random() * operators.length)];
+      let questionString;
+      let correctAnswer;
 
-  function animar(tipo) {
-    container.classList.remove("shake", "flash");
-    void container.offsetWidth; // Forçar reflow
-    container.classList.add(tipo);
-  }
-
-  function atualizarTela() {
-    document.getElementById('tempo').textContent = tempo;
-    document.getElementById('pontos').textContent = pontos;
-  }
-
-  function iniciarJogo() {
-    tempo = 60;
-    pontos = 0;
-    document.getElementById('status').textContent = "";
-    document.getElementById('nomeArea').style.display = "none";
-    document.getElementById('resposta').disabled = false;
-    document.getElementById('resposta').focus();
-
-    gerarEquacao();
-    atualizarTela();
-
-    clearInterval(timer);
-    timer = setInterval(() => {
-      tempo--;
-      atualizarTela();
-      if (tempo <= 0) {
-        clearInterval(timer);
-        document.getElementById('status').textContent = `⏱️ Fim de jogo! Você fez ${pontos} ponto(s)!`;
-        somFim.play();
-        document.getElementById('resposta').disabled = true;
-        document.getElementById('nomeArea').style.display = "block";
-        document.getElementById('nomeJogador').focus();
+      if (operator === '+') {
+        questionString = `${num1} + ${num2}`;
+        correctAnswer = num1 + num2;
+      } else if (operator === '-') {
+        // Garante que o resultado não seja negativo
+        if (num1 < num2) {
+          questionString = `${num2} - ${num1}`;
+          correctAnswer = num2 - num1;
+        } else {
+          questionString = `${num1} - ${num2}`;
+          correctAnswer = num1 - num2;
+        }
+      } else { // Multiplication
+        questionString = `${num1} * ${num2}`;
+        correctAnswer = num1 * num2;
       }
-    }, 1000);
-  }
 
-  function salvarPontuacao() {
-    const nome = document.getElementById("nomeJogador").value.trim() || "Anônimo";
-    const ranking = JSON.parse(localStorage.getItem("rankingMath") || "[]");
+      currentQuestion = { question: questionString, answer: correctAnswer };
+      questionElement.textContent = currentQuestion.question;
+      answerInput.value = '';
+      messageElement.textContent = '';
+    }
 
-    ranking.push({ nome, pontos });
-    ranking.sort((a, b) => b.pontos - a.pontos);
-    if (ranking.length > 10) ranking.length = 10;
+    function startGame() {
+      score = 0;
+      timeLeft = 60;
+      gameActive = true;
+      scoreValueElement.textContent = score;
+      timerValueElement.textContent = timeLeft + 's';
+      answerInput.disabled = false;
+      answerInput.focus();
+      startButton.style.display = 'none';
+      submitAnswerButton.style.display = 'inline-block';
+      playAgainButton.style.display = 'none';
+      generateQuestion();
 
-    localStorage.setItem("rankingMath", JSON.stringify(ranking));
-    document.getElementById('nomeArea').style.display = "none";
-    atualizarRanking();
-  }
+      timerInterval = setInterval(() => {
+        timeLeft--;
+        timerValueElement.textContent = timeLeft + 's';
+        if (timeLeft <= 0) {
+          endGame();
+        }
+      }, 1000);
+    }
 
-  function atualizarRanking() {
-    const ranking = JSON.parse(localStorage.getItem("rankingMath") || "[]");
-    const lista = document.getElementById("rankingLista");
-    lista.innerHTML = "";
+    function endGame() {
+      clearInterval(timerInterval);
+      gameActive = false;
+      answerInput.disabled = true;
+      submitAnswerButton.style.display = 'none';
+      playAgainButton.style.display = 'inline-block';
+      messageElement.textContent = `Tempo esgotado! Você fez ${score} pontos.`;
 
-    ranking.forEach((r) => {
-      const item = document.createElement("li");
-      item.textContent = `${r.nome} - ${r.pontos} ponto(s)`;
-      lista.appendChild(item);
+      const playerName = prompt("Fim de jogo! Digite seu nome para o ranking:");
+      if (playerName) {
+        saveRanking(playerName, score);
+      }
+    }
+
+    function checkAnswer() {
+      if (!gameActive) return;
+
+      const userAnswer = parseInt(answerInput.value);
+      if (isNaN(userAnswer)) {
+        messageElement.textContent = 'Por favor, digite um número!';
+        return;
+      }
+
+      if (userAnswer === currentQuestion.answer) {
+        score++;
+        scoreValueElement.textContent = score;
+        messageElement.textContent = 'Correto!';
+        messageElement.style.color = '#28a745'; /* Verde */
+        generateQuestion();
+      } else {
+        messageElement.textContent = 'Errado. Tente novamente.';
+        messageElement.style.color = '#d9534f'; /* Vermelho */
+        score = Math.max(0, score - 1); // Subtrai ponto por erro, mas não abaixo de zero
+        scoreValueElement.textContent = score;
+        // Não gera nova pergunta, permite nova tentativa
+      }
+    }
+
+    // Event Listeners
+    startButton.addEventListener('click', startGame);
+    submitAnswerButton.addEventListener('click', checkAnswer);
+    playAgainButton.addEventListener('click', startGame);
+
+    // Permitir submeter com Enter
+    answerInput.addEventListener('keypress', (e) => {
+      if (e.key === 'Enter') {
+        checkAnswer();
+      }
     });
-  }
 
-  // ENTER ativa resposta
-  input.addEventListener("keydown", function(e) {
-    if (e.key === "Enter") verificarResposta();
-  });
+    // Carrega o ranking ao carregar a página
+    window.onload = displayRanking;
 
-  iniciarJogo();
-  atualizarRanking();
-</script>
-
+  </script>
 </body>
 </html>
