Atualizar o index.html

--- a/index.html
+++ b/index.html
@@ -52,9 +52,24 @@
     ul {
       padding-left: 20px;
     }
+    li {
+      margin-bottom: 10px;
+    }
+    strong.valor {
+      color: #0d47a1;
+      font-weight: bold;
+    }
+    .bloco {
+      background: #e3f2fd;
+      padding: 12px 18px;
+      margin: 12px 0;
+      border-left: 5px solid #0d47a1;
+      border-radius: 6px;
+    }
     .contato a {
       text-decoration: none;
       color: #0d47a1;
+      font-weight: bold;
     }
     footer {
       text-align: center;
@@ -84,60 +99,70 @@
 
 <section>
   <h2>Quem sou eu?</h2>
-  <p>Sou Dionatan Wiggers, desenvolvedor web com ampla experiência em criação de sites profissionais, aplicativos personalizados e gestão digital. Entrego soluções completas para empresas e profissionais que desejam construir uma presença sólida na internet, com foco em performance, estética e resultados.</p>
+  <div class="bloco">
+    Sou Dionatan Wiggers, desenvolvedor web com ampla experiência em criação de sites profissionais, aplicativos personalizados e gestão digital. Entrego soluções completas com foco em performance, estética e resultados.
+  </div>
 </section>
 
 <section>
   <h2><i class="fas fa-globe"></i> Criação e Manutenção de Sites</h2>
   <ul>
-    <li>Registro de domínio (.com.br): R$50 a R$150/ano</li>
-    <li>Hospedagem: R$20 a R$450/mês</li>
-    <li>Desenvolvimento:
+    <li>📌 <strong>Registro de domínio:</strong> <span class="valor">R$50 a R$150/ano</span></li>
+    <li>🌐 <strong>Hospedagem:</strong> <span class="valor">R$20 a R$450/mês</span></li>
+    <li>💻 <strong>Desenvolvimento:</strong>
       <ul>
-        <li>Site simples: a partir de R$300</li>
-        <li>Site com e-commerce ou recursos avançados: a partir de R$1000</li>
+        <li>Site simples: <span class="valor">a partir de R$300</span></li>
+        <li>Com e-commerce/recursos avançados: <span class="valor">a partir de R$1000</span></li>
       </ul>
     </li>
-    <li>Manutenção: Correções, melhorias e suporte técnico sob demanda</li>
+    <li>🔧 <strong>Manutenção:</strong> Correções e melhorias sob demanda</li>
   </ul>
 </section>
 
 <section>
   <h2><i class="fab fa-instagram"></i> Gestão Profissional de Instagram</h2>
   <ul>
-    <li>Social Media Júnior: R$500 a R$1000/mês</li>
-    <li>Social Media Pleno: R$1000 a R$2500/mês</li>
-    <li>Agência completa: R$3500 a R$6000/mês</li>
+    <li>📱 Social Media Júnior: <span class="valor">R$500 a R$1000/mês</span></li>
+    <li>🚀 Social Media Pleno: <span class="valor">R$1000 a R$2500/mês</span></li>
+    <li>🏢 Agência completa: <span class="valor">R$3500 a R$6000/mês</span></li>
   </ul>
-  <p><strong>Inclui:</strong> Criação de conteúdo, agendamento, interação com seguidores, análise de resultados e anúncios.</p>
+  <div class="bloco">
+    Inclui: criação de conteúdo (feed, stories, reels), agendamento, interação com seguidores, análise de resultados e campanhas patrocinadas.
+  </div>
 </section>
 
 <section>
   <h2><i class="fas fa-mobile-alt"></i> Desenvolvimento de Aplicativos</h2>
-  <p><strong>Apps de Jogos:</strong> Criação de games educativos, interativos e com monetização.</p>
-  <p><strong>Apps de Gestão Financeira:</strong> Controle de caixa, relatórios, gráficos e integração com bancos.</p>
+  <div class="bloco">
+    🎮 <strong>Apps de Jogos:</strong> Games educativos, competitivos, com monetização via anúncios ou Pix.
+  </div>
+  <div class="bloco">
+    📊 <strong>Apps de Gestão Financeira:</strong> Controle de caixa, relatórios personalizados, gráficos e integração bancária.
+  </div>
 </section>
 
 <section>
   <h2><i class="fas fa-chart-line"></i> Análise de Dados</h2>
-  <p>Análise contínua do desempenho de sites, apps e redes sociais com foco em melhorias reais, baseadas em dados e métricas.</p>
+  <div class="bloco">
+    📈 Análise de desempenho contínuo de sites, apps e redes sociais para melhorias com base em dados reais.
+  </div>
 </section>
 
 <section>
   <h2><i class="fas fa-coins"></i> Fatores que Influenciam nos Custos</h2>
   <ul>
-    <li>Complexidade do projeto</li>
-    <li>Frequência de atualizações</li>
-    <li>Nível de automação exigido</li>
-    <li>Experiência e prazo</li>
+    <li>🔍 Complexidade do projeto</li>
+    <li>🔁 Frequência de atualizações</li>
+    <li>🤖 Nível de automação exigido</li>
+    <li>⏱️ Tempo de execução e experiência técnica</li>
   </ul>
 </section>
 
 <section class="contato">
   <h2><i class="fas fa-address-card"></i> Contato</h2>
-  <p><strong>Email:</strong> <a href="mailto:dionegalato1212@gmail.com">dionegalato1212@gmail.com</a></p>
-  <p><strong>WhatsApp:</strong> <a href="https://wa.me/5551989378751" target="_blank">(51) 98937-8751</a></p>
-  <p><strong>Instagram:</strong> <a href="https://instagram.com/wiggers_dionatan" target="_blank">@wiggers_dionatan</a></p>
+  <p>📧 <strong>Email:</strong> <a href="mailto:dionegalato1212@gmail.com">dionegalato1212@gmail.com</a></p>
+  <p>📱 <strong>WhatsApp:</strong> <a href="https://wa.me/5551989378751" target="_blank">(51) 98937-8751</a></p>
+  <p>📸 <strong>Instagram:</strong> <a href="https://instagram.com/wiggers_dionatan" target="_blank">@wiggers_dionatan</a></p>
 </section>
 
 <footer>
