--- a/index.html
+++ b/index.html
@@ -2,194 +2,166 @@
 <html lang="pt-BR">
 <head>
   <meta charset="UTF-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1" />
-  <title>W.W | Desenvolvedor Web</title>
-  <link rel="preconnect" href="https://fonts.googleapis.com">
-  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-  <link href="https://fonts.googleapis.com/css2?family=Lato:wght@400;700&family=Montserrat:wght@500;700&display=swap" rel="stylesheet">
-  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <title>Dionatan Wiggers | Desenvolvedor Web</title>
+  <link href="https://fonts.googleapis.com/css2?family=Orbitron:wght@600&family=Montserrat&display=swap" rel="stylesheet">
+  <link href="https://unpkg.com/aos@2.3.1/dist/aos.css" rel="stylesheet">
   <style>
+    :root {
+      --bg-color: #0a0a0a;
+      --primary: #1de9b6;
+      --glass: rgba(255, 255, 255, 0.05);
+    }
+
+    * {
+      margin: 0;
+      padding: 0;
+      box-sizing: border-box;
+    }
+
     body {
       font-family: 'Montserrat', sans-serif;
-      margin: 0;
-      background: #f8f9fa;
-      color: #333;
+      background: linear-gradient(135deg, #0a0a0a 0%, #111 100%);
+      color: white;
+      padding: 20px;
       overflow-x: hidden;
     }
-    header {
-      background: linear-gradient(135deg, #0d47a1, #1976d2);
-      color: white;
-      padding: 60px 20px;
-      text-align: center;
-    }
+
     .logo {
-      font-size: 3.2em;
-      font-weight: bold;
-      letter-spacing: 4px;
+      max-width: 180px;
+      display: block;
+      margin: 30px auto 10px;
+      animation: fadeIn 1s ease-in-out;
     }
-    .sublogo {
-      font-size: 1.2em;
-      margin-top: -10px;
-      font-weight: 300;
-      color: #e3f2fd;
+
+    header {
+      text-align: center;
+      margin-bottom: 40px;
     }
-    section {
-      max-width: 960px;
-      margin: 40px auto;
-      background: white;
-      border-radius: 10px;
-      padding: 30px;
-      box-shadow: 0 2px 16px rgba(0,0,0,0.08);
-      transition: transform 0.3s ease;
-      animation: fadeIn 0.8s ease;
+
+    header h1 {
+      font-family: 'Orbitron', sans-serif;
+      font-size: 2.8rem;
+      color: var(--primary);
+      text-shadow: 0 0 10px var(--primary);
     }
-    section:hover {
-      transform: translateY(-4px);
+
+    header p {
+      color: #ccc;
+      font-size: 1.1rem;
     }
-    section h2 {
-      color: #0d47a1;
-      margin-top: 0;
+
+    .section {
+      background: var(--glass);
+      backdrop-filter: blur(10px);
+      border: 1px solid rgba(29, 233, 182, 0.2);
+      border-radius: 16px;
+      padding: 25px;
+      margin: 30px auto;
+      max-width: 950px;
+      box-shadow: 0 0 15px rgba(29, 233, 182, 0.1);
     }
+
+    .section:hover {
+      box-shadow: 0 0 30px rgba(29, 233, 182, 0.3);
+    }
+
+    h2 {
+      font-family: 'Orbitron', sans-serif;
+      color: var(--primary);
+      margin-bottom: 20px;
+      font-size: 1.5rem;
+    }
+
     ul {
-      padding-left: 20px;
+      list-style: none;
     }
-    li {
-      margin-bottom: 10px;
+
+    ul li {
+      padding: 12px;
+      margin: 5px 0;
+      background: rgba(255,255,255,0.02);
+      border-left: 3px solid var(--primary);
+      font-weight: 500;
+      color: #eee;
     }
-    strong.valor {
-      color: #0d47a1;
-      font-weight: bold;
+
+    .contact-btns {
+      text-align: center;
+      margin-top: 40px;
     }
-    .bloco {
-      background: #e3f2fd;
-      padding: 12px 18px;
-      margin: 15px 0;
-      border-left: 5px solid #0d47a1;
-      border-radius: 6px;
-    }
-    .contato a {
+
+    .contact-btns a {
+      display: inline-block;
+      padding: 14px 26px;
+      margin: 10px;
+      color: white;
+      background: transparent;
+      border: 1px solid var(--primary);
+      border-radius: 30px;
       text-decoration: none;
-      color: #0d47a1;
       font-weight: bold;
+      transition: 0.3s;
     }
+
+    .contact-btns a:hover {
+      background: var(--primary);
+      color: #000;
+      box-shadow: 0 0 20px var(--primary);
+    }
+
     footer {
       text-align: center;
-      padding: 20px;
-      background: #0d47a1;
-      color: white;
+      font-size: 0.9rem;
+      color: #777;
+      margin-top: 60px;
     }
+
     @keyframes fadeIn {
-      from {opacity: 0; transform: translateY(10px);}
-      to {opacity: 1; transform: translateY(0);}
-    }
-
-    .btn-float {
-      position: fixed;
-      width: 60px;
-      height: 60px;
-      bottom: 30px;
-      right: 30px;
-      background-color: #0d47a1;
-      color: white;
-      border-radius: 50%;
-      text-align: center;
-      font-size: 28px;
-      box-shadow: 2px 2px 10px rgba(0,0,0,0.3);
-      z-index: 1000;
-      display: flex;
-      align-items: center;
-      justify-content: center;
-      text-decoration: none;
-    }
-
-    .btn-float.instagram {
-      bottom: 100px;
-      background: #e1306c;
-    }
-
-    @media(max-width: 600px) {
-      header h1 {
-        font-size: 1.8em;
-      }
-      .logo {
-        font-size: 2em;
-      }
+      from { opacity: 0; transform: translateY(-20px); }
+      to { opacity: 1; transform: translateY(0); }
     }
   </style>
 </head>
 <body>
-<header>
-  <div class="logo">W.W</div>
-  <div class="sublogo">Desenvolvedor Web</div>
-  <h1>Dionatan Wiggers</h1>
-  <p>Sites, Apps, Análise de Dados e Gestão Digital</p>
-</header>
 
-<section>
-  <h2>Quem sou eu?</h2>
-  <div class="bloco">
-    Sou Dionatan Wiggers, desenvolvedor web com experiência em sites modernos, apps personalizados, gestão digital e análise de dados para crescimento de negócios.
+  <header>
+    <img src="logo-ww.png" alt="Logo W.W" class="logo" />
+    <h1>Dionatan Wiggers</h1>
+    <p>Desenvolvedor Web | Sites | Apps | Dados | Instagram</p>
+  </header>
+
+  <div class="section" data-aos="fade-up">
+    <h2>🚀 Serviços Oferecidos</h2>
+    <ul>
+      <li>✅ Criação de Sites Responsivos e Otimizados</li>
+      <li>✅ Desenvolvimento de Apps (jogos e gestão financeira)</li>
+      <li>✅ Gestão de Instagram com Estratégias Reais</li>
+      <li>✅ Análise de Dados para Crescimento e Otimização</li>
+    </ul>
   </div>
-</section>
 
-<section>
-  <h2><i class="fas fa-globe"></i> Criação de Sites</h2>
-  <ul>
-    <li>Domínio: <span class="valor">R$50 a R$150/ano</span></li>
-    <li>Hospedagem: <span class="valor">R$20 a R$450/mês</span></li>
-    <li>Desenvolvimento:
-      <ul>
-        <li>Simples: <span class="valor">a partir de R$300</span></li>
-        <li>Avançado/E-commerce: <span class="valor">a partir de R$1000</span></li>
-      </ul>
-    </li>
-    <li>Manutenção: sob demanda</li>
-  </ul>
-</section>
-
-<section>
-  <h2><i class="fab fa-instagram"></i> Gestão de Instagram</h2>
-  <ul>
-    <li>Júnior: <span class="valor">R$500 a R$1000/mês</span></li>
-    <li>Pleno: <span class="valor">R$1000 a R$2500/mês</span></li>
-    <li>Agência: <span class="valor">R$3500 a R$6000/mês</span></li>
-  </ul>
-  <div class="bloco">Inclui conteúdo, interação, análise de resultados e anúncios.</div>
-</section>
-
-<section>
-  <h2><i class="fas fa-mobile-alt"></i> Desenvolvimento de Apps</h2>
-  <div class="bloco">
-    🎮 Jogos: educativos, desafiantes e com monetização (Ads/Pix)
+  <div class="section" data-aos="fade-up" data-aos-delay="200">
+    <h2>📞 Contato</h2>
+    <ul>
+      <li>📧 E-mail: dionegalato1212@gmail.com</li>
+      <li>📱 WhatsApp: (51) 98937-8751</li>
+      <li>📸 Instagram: @wiggers_dionatan</li>
+    </ul>
   </div>
-  <div class="bloco">
-    📊 Gestão Financeira: controle de caixa, gráficos, relatórios
+
+  <div class="contact-btns" data-aos="zoom-in">
+    <a href="https://wa.me/5551989378751" target="_blank">Fale no WhatsApp</a>
+    <a href="https://instagram.com/wiggers_dionatan" target="_blank">Ver Instagram</a>
   </div>
-</section>
 
-<section>
-  <h2><i class="fas fa-chart-line"></i> Análise de Dados</h2>
-  <div class="bloco">
-    Monitoramento de desempenho com relatórios personalizados para tomar decisões mais eficazes.
-  </div>
-</section>
+  <footer>
+    &copy; 2025 Dionatan Wiggers - Todos os direitos reservados
+  </footer>
 
-<section>
-  <h2><i class="fas fa-address-card"></i> Contato</h2>
-  <p>Email: <a href="mailto:dionegalato1212@gmail.com">dionegalato1212@gmail.com</a></p>
-  <p>WhatsApp: <a href="https://wa.me/5551989378751">(51) 98937-8751</a></p>
-  <p>Instagram: <a href="https://instagram.com/wiggers_dionatan">@wiggers_dionatan</a></p>
-</section>
-
-<a class="btn-float" href="https://wa.me/5551989378751" target="_blank" title="WhatsApp">
-  <i class="fab fa-whatsapp"></i>
-</a>
-<a class="btn-float instagram" href="https://instagram.com/wiggers_dionatan" target="_blank" title="Instagram">
-  <i class="fab fa-instagram"></i>
-</a>
-
-<footer>
-  © 2025 Dionatan Wiggers – Todos os direitos reservados
-</footer>
+  <script src="https://unpkg.com/aos@2.3.1/dist/aos.js"></script>
+  <script>
+    AOS.init();
+  </script>
 </body>
 </html>
