--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
   <style>
     body {
       font-family: 'Montserrat', sans-serif;
-      margin: 0;
+      margin: 0;f
       background: #0e0e0e;
       color: #ddd;
     }
@@ -112,7 +112,7 @@
 <body>
 
 <header>
-  <div class="logo">W.W</div>
+  <img src="foto12.png" alt="Logo W.W" class="logo">
   <div class="sublogo">Desenvolvedor Web</div>
   <h1>Dionatan Wiggers</h1>
   <p>Desenvolvedor Web • Criador de Apps • Especialista em Gestão Digital</p>
