--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
       font-family: 'Montserrat', sans-serif;
       margin: 0;f
       background: #0e0e0e;
-      color: #ddd;
+      color: #ddd;F
     }
     header {
       background: #1a1a1a;
@@ -19,10 +19,11 @@
       padding: 50px 20px 30px 20px;
       text-align: center;
     }
-    .logo {
-      font-size: 3em;
-      font-weight: bold;
-      letter-spacing: 4px;
+   .logo {
+  max-width: 160px;
+  height: auto;
+  display: block;
+  margin: 0 auto 15px auto;
     }
     .sublogo {
       font-size: 1.2em;
