--- a/index.html
+++ b/index.html
@@ -114,9 +114,8 @@
 
 <header>
   <img src="foto12.png" alt="Logo W.W" class="logo">
-  <div class="sublogo">Desenvolvedor Web</div>
+  <div class="sublogo"></div>
   <h1>Dionatan Wiggers</h1>
-  <p>Desenvolvedor Web • Criador de Apps • Especialista em Gestão Digital</p>
 </header>
 
 <section>
