--- a/index.html
+++ b/index.html
@@ -8,10 +8,10 @@
   <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@400;600&display=swap" rel="stylesheet">
   <style>
     body {
-      font-family: 'Montserrat', sans-serif;
-      margin: 0;f
-      background: #0e0e0e;
-      color: #ddd;F
+  font-family: 'Montserrat', sans-serif;
+  margin: 0;
+  background: #0e0e0e;
+  color: #ddd;
     }
     header {
       background: #1a1a1a;
@@ -20,11 +20,11 @@
       text-align: center;
     }
    .logo {
-  max-width: 160px;
+  max-width: 220px;
   height: auto;
   display: block;
   margin: 0 auto 15px auto;
-    }
+}
     .sublogo {
       font-size: 1.2em;
       margin-top: -10px;
@@ -104,10 +104,15 @@
       bottom: 95px;
       background: #e1306c;
     }
-    @media(max-width: 600px) {
-      header h1 { font-size: 1.8em; }
-      .logo { font-size: 2em; }
-    }
+    @media (max-width: 600px) {
+  header h1 {
+    font-size: 1.8em;
+  }
+
+  .logo {
+    max-width: 140px;
+  }
+}
   </style>
 </head>
 <body>
