--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <title>W.W | </title>
+<link rel="icon" type="image/png" href="data:image/png;base64,iVBORw0KGgoAAAANSUhEUgAAAEAAAABACAIAAAAlC+aJAAAPyElEQVR4nKVaS28kR3KOyMzKqn43n01yZjhjSNDIluEZg4IBYQDDBnywL14bvvjsX+eL7z74sYcdG7MGJC0GWFm7Gokjkexhd7NJ9qOqq7Iqw4esR9aDFAEnOD1VWZGRkfH4IjKrcDgYElQbAhACElB2CwgAQOk/8x+CRZMORCBK6YmKzrxROg6ISv3FU0...">
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css">
   <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@400;600&display=swap" rel="stylesheet">
   <style>
