--- a/index.html
+++ b/index.html
@@ -111,7 +111,7 @@
     <header class="header-bg py-8">
         <div class="container text-center">
             <h1 class="text-4xl font-bold mb-2">Dionatan Wiggers</h1>
-            <p class="text-lg">Analista de Projetos Digitais e Gestor de Negócios</p>
+            <p class="text-lg">Analista de Dados, Analista de Projetos, desenvolvedor web </p>
             <!-- Ajustes para o alinhamento do contato -->
             <div class="mt-4 flex flex-col sm:flex-row justify-center items-center text-center sm:space-x-4">
                 <a href="mailto:dionegalato1212@gmail.com" class="text-blue-300 hover:underline mb-2 sm:mb-0">dionegalato1212@gmail.com</a>
